--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -125,8 +125,11 @@ AS_IF([test "x$ENABLE_GTK3" != "xyes"],
     PKG_CHECK_MODULES(GTK2_24,[gtk+-2.0 >= 2.24.0],[GTK2_24_DEFINES="-DGTK2_24_ENABLED -DGTK_DISABLE_DEPRECATED" AC_DEFINE([GTK2_24_ENABLED],[1],[Define to 1 if you have GTK 2.24 or higher])],AC_MSG_NOTICE([Disabling Depreciated GTK Functions]))
     AC_SUBST(GTK2_24_DEFINES)
 
-    PKG_CHECK_MODULES(GLIB2_14,[glib-2.0 >= 2.14.0],[GLIB2_14_DEFINES="-DGLIB2_14_ENABLED" AC_DEFINE([GLIB2_14_ENABLED],[1],[Define to 1 if you have GLIB 2.14 or higher])],AC_MSG_NOTICE([Using slider for volume]))
+    PKG_CHECK_MODULES(GLIB2_14,[glib-2.0 >= 2.14.0],[GLIB2_14_DEFINES="-DGLIB2_14_ENABLED" AC_DEFINE([GLIB2_14_ENABLED],[1],[Define to 1 if you have GLIB 2.14 or higher])],AC_MSG_NOTICE([Using GLIB 2.14 features]))
     AC_SUBST(GLIB2_14_DEFINES)
+
+    PKG_CHECK_MODULES(GLIB2_18,[glib-2.0 >= 2.18.0],[GLIB2_18_DEFINES="-DGLIB2_18_ENABLED" AC_DEFINE([GLIB2_18_ENABLED],[1],[Define to 1 if you have GLIB 2.18 or higher])],AC_MSG_NOTICE([Using GLIB 2.18 features]))
+    AC_SUBST(GLIB2_18_DEFINES)
 
     PKG_CHECK_MODULES(GLIB2_24,[glib-2.0 >= 2.24.0],[GLIB2_24_DEFINES="-DGLIB2_24_ENABLED" AC_DEFINE([GLIB2_24_ENABLED],[1],[Define to 1 if you have GLIB 2.24 or higher])],AC_MSG_NOTICE([Using GLIB 2.24 features]))
     AC_SUBST(GLIB2_24_DEFINES)
