--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -74,6 +74,7 @@ libgmlib_la_LIBADD = \
 
 includedir = $(prefix)/include/gmtk
 include_HEADERS = \
+    gm_common.h \
 	gm_audio.h \
 	gm_file.h \
 	gmlib.h \
