--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
-AC_INIT(gmtk, 1.0.5)
+AC_INIT(gmtk, 1.0.6b1)
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
@@ -9,7 +9,7 @@ AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE([enable])
 
 AC_PROG_CC
-
+AC_CONFIG_MACRO_DIR([m4])
 
 
 
