--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -3,7 +3,7 @@
 ## Created by Anjuta
 
 AM_CPPFLAGS = \
-	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
+	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" $(GMTK_CFLAGS)
 
