--- a/trunk/src/Makefile.in
+++ b/trunk/src/Makefile.in
@@ -164,6 +164,8 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
+ENABLE_GTK2 = @ENABLE_GTK2@
+ENABLE_GTK3 = @ENABLE_GTK3@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
 GCONF_CFLAGS = @GCONF_CFLAGS@
@@ -187,12 +189,11 @@ GLIB2_26_CFLAGS = @GLIB2_26_CFLAGS@
 GLIB2_26_DEFINES = @GLIB2_26_DEFINES@
 GLIB2_26_LIBS = @GLIB2_26_LIBS@
 GLIB_CFLAGS = @GLIB_CFLAGS@
-GLIB_COMPILE_SCHEMAS = @GLIB_COMPILE_SCHEMAS@
 GLIB_LIBS = @GLIB_LIBS@
 GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
 GREP = @GREP@
-GSETTINGS_DISABLE_SCHEMAS_COMPILE = @GSETTINGS_DISABLE_SCHEMAS_COMPILE@
+GSETTINGS_RULES = @GSETTINGS_RULES@
 GTK2_12_CFLAGS = @GTK2_12_CFLAGS@
 GTK2_12_DEFINES = @GTK2_12_DEFINES@
 GTK2_12_LIBS = @GTK2_12_LIBS@
@@ -251,12 +252,9 @@ PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
 PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
-PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PKG_CONFIG = @PKG_CONFIG@
-PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
-PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 POFILES = @POFILES@
 POSUB = @POSUB@
 PO_IN_DATADIR_FALSE = @PO_IN_DATADIR_FALSE@
@@ -300,7 +298,6 @@ datarootdir = @datarootdir@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
-gsettingsschemadir = @gsettingsschemadir@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
