--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -1,6 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
+
 AC_INIT(gmtk, 1.0.7a1)
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
@@ -12,6 +13,15 @@ AC_PROG_CC
 AC_CONFIG_MACRO_DIR([m4])
 
 
+MAJOR_VERSION=1
+MINOR_VERSION=0
+RELEASE_VERSION=7
+AC_SUBST(MAJOR_VERSION)
+AC_SUBST(MINOR_VERSION)
+AC_SUBST(RELEASE_VERSION)
+
+LIB_VERSION=$MAJOR_VERSION:$MINOR_VERSION:$RELEASE_VERSION
+AC_SUBST(LIB_VERSION)
 
 dnl ***************************************************************************
 dnl Internatinalization
